update doc for hello-blog

--- a/themes/next-reloaded/_config.yml
+++ b/themes/next-reloaded/_config.yml
@@ -113,9 +113,9 @@ scheme: Pisces
 
 menu:
   home: / || home
-  #about: /about/ || user
-  tags: /tags/ || tags
   categories: /categories/ || th
+  tags: /tags/ || tags
+  about: /about/ || user
   archives: /archives/ || archive
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
